# haskell-workflow

./: .gitignore  CHANGELOG.md  haskell-workflow.cabal
documents/: Requirements.org  Spec.org
lib/: TemplatingFunctions.hs  Types.hs
