cabal-version:      2.4
name:               haskell-workflow
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             OZoneGuy
maintainer:         oalkersh@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends: base >= 4.15,
                 containers >= 0.6,
                 template-haskell >= 2.17
  extensions:          ExistentialQuantification
                       DuplicateRecordFields
  hs-source-dirs: lib
  default-language: Haskell2010
  ghc-options: -dynamic
  exposed-modules: Types

executable haskell-workflow
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
